Revert "Prevent new composer from overflowing from non-breakable text (#8829)"
This reverts commit 57dff8131c6ecbd708011004928d2c943ad02cab.

--- a/res/css/views/rooms/_MessageComposer.scss
+++ b/res/css/views/rooms/_MessageComposer.scss
@@ -37,7 +37,6 @@ limitations under the License.
     }
 
     .mx_MessageComposer_row {
-        min-width: 0;
         grid-area: composer;
     }
 
